--- a/index.html
+++ b/index.html
@@ -506,13 +506,15 @@
         
         function displaySimpleResults(distribution) {
             const container = document.getElementById('simple-results-container');
-            let tableHTML = `<h3 class="text-xl font-semibold text-slate-800 border-b pb-2 my-4">Distribution Results</h3><table class="w-full text-left border-collapse"><thead><tr class="bg-slate-100"><th class="p-3 text-sm font-semibold tracking-wide">Heir</th><th class="p-3 text-sm font-semibold tracking-wide text-center">Share</th><th class="p-3 text-sm font-semibold tracking-wide text-right">Percentage</th></tr></thead><tbody>`;
+            let tableHTML = `<h3 class="text-xl font-semibold text-slate-800 border-b pb-2 my-4">Distribution Results</h3><table class="w-full text-left border-collapse">
+                <thead><tr class="bg-slate-100"><th class="p-3 text-sm font-semibold tracking-wide">Heir</th><th class="p-3 text-sm font-semibold tracking-wide text-center">Share</th><th class="p-3 text-sm font-semibold tracking-wide text-right">Percentage</th><th class="p-3 text-sm font-semibold tracking-wide text-center"></th></tr></thead><tbody>`;
+            
             distribution.forEach(heir => {
                 const shareText = heir.shareNumerator ? `${heir.shareNumerator}/${heir.shareDenominator}` : heir.shareType;
-                if(heir.percentage > 0) {
-                     tableHTML += `<tr class="border-b border-slate-200"><td class="p-3 font-medium">${heir.name} (${heir.count})</td><td class="p-3 text-center">${shareText}</td><td class="p-3 text-right font-semibold">${heir.percentage.toFixed(2)}%</td></tr>`;
-                }
+                tableHTML += `<tr class="border-b border-slate-200"><td class="p-3 font-medium">${heir.name} (${heir.count})</td><td class="p-3 text-center">${shareText}</td><td class="p-3 text-right font-semibold">${heir.percentage.toFixed(2)}%</td><td class="p-3 text-center"><button onclick="toggleAccordion(this)" class="text-blue-600 hover:underline text-sm">Hide</button></td></tr>
+                <tr><td colspan="4" class="p-0"><div class="accordion-content bg-slate-50"><p class="p-4 text-sm text-slate-700">${heir.explanation}</p></div></td></tr>`;
             });
+
             tableHTML += `</tbody></table>`;
             container.innerHTML = tableHTML;
             container.classList.remove('hidden-item');
